<resources>
    <string name="app_name">NoControle</string>
    <string name="balanco">Balanço</string>
    <string name="despmesatual">Despesas</string>
    <string name="DespCategoria">Despesas por categoria</string>
    <string name="receitacategoria">Receitas por categoria</string>
    <string name="descImage">Perfil usuário</string>
    <string name="receita">Receita</string>
    <string name="despesa">Despesa</string>
    <string name="novo_lancamento">Financeiro</string>
    <string name="desc_novo_lancamento">Novo lançamento de despesa ou receita</string>
    <string name="date_actual">JUN/2020</string>
    <string name="more">+</string>
    <string name="descricao">Descrição</string>
    <string name="salvar">Salvar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_categoria">Categoria</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="categoria">Categorias</string>
    <string name="edit_cat">Editar categoria</string>
    <string name="del_categoria">Excluir categoria</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Alimentação</string>
    <string name="menu_slideshow">Exercício</string>

    <string name="home_second">Home Second</string>
    <string name="tipo_lan_amento">Tipo lançamento</string>
    <string name="valor">Valor</string>
    <string name="data_lan_amento">Data lançamento</string>
    <string name="select_month">Selecione um mês</string>
    <string name="trocar">Trocar</string>


    <string name="nadaEncontrado">Nada encontrado</string>
</resources>
