<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.financeiro.FinanceiroActivity">

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/descImage"
        android:elevation="5dp"
        android:src="@drawable/user"
        app:layout_constraintCircleRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBalanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/balanco"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_balanco"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp">

                <com.github.mikephil.charting.charts.BarChart
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="right|center"
                    android:id="@+id/chartBalanco"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textViewDespMesAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/despmesatual"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_desp_mes_atual"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp">

                <com.github.mikephil.charting.charts.LineChart
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_margin="10dp"
                    android:id="@+id/chartDespMes"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textViewDespCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/DespCategoria"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_desp_categoria"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chartDespCategoria"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="right"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textViewRecCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/receitacategoria"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_rec_categoria"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="25dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>