<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_actual_month"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/custom_button"
                android:elevation="@dimen/elevation_card"
                android:fontFamily="@font/roboto_mono_light"
                android:shadowColor="@android:color/black"
                android:text="@string/date_actual" />

            <TextView
                android:id="@+id/textViewBalanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/balanco"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_balanco"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chartBalanco"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textBalReceita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="50dp"
                        android:fontFamily="@font/roboto_mono_light"
                        android:text="@string/receita"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textBalDespesa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="50dp"
                        android:fontFamily="@font/roboto_mono_light"
                        android:text="@string/despesa"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textViewDespMesAtual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/despmesatual"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_desp_mes_atual"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartDespMes"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_margin="10dp" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textViewDespCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/DespCategoria"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_desp_categoria"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="25dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chartDespCategoria"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyViewDespCat"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/chartDespCategoria"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_categoria"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textViewRecCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/roboto_mono_light"
                android:text="@string/receitacategoria"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_rec_categoria"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="88dp"
                app:cardCornerRadius="25dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/chartRecCategoria"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="end"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyViewRecCat"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/chartRecCategoria"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:listitem="@layout/item_categoria">

                    </androidx.recyclerview.widget.RecyclerView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>